fixed sidebar opening issue on mobile

--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -10,6 +10,7 @@
   top: 0;
   left: 0;
   background-color: $background-blue;
+  touch-action: none;
 
   @media screen and (max-width: 768px) {
     background-color: transparent;
